# nextgame

./: .clang-format  .gitignore  CMakeLists.txt  ProjectClassModel.txt  README.md  conanfile.txt
scripts/: build.ps1  variables.ps1
scripts/linux/: build.sh  init.sh
scripts/windows/: .build.ps1.un~  build.ps1  build.ps1~  clean.ps1  deinit.ps1  init.ps1  rebuild.ps1
source/: nextgame.cpp  nextgame_dep.cpp
source/private/: GameInstance.cpp  MGameInstance.cpp  MGameWorld.cpp
source/public/: GameInstance.h  Helpers.h  Interfaces.h  MGameInstance.h  MGameWorld.h
